[FIX] hr_referral: make text white
In applicants kanban view, when there is no applications, the text was unreadable, so it is white now.

closes odoo/enterprise#65094

Task: 3786280
X-original-commit: 6dd3765b09afe2ad8c5d73427906cfa5e4230c36

--- a/hr_referral/static/src/scss/referral_kanban_view.scss
+++ b/hr_referral/static/src/scss/referral_kanban_view.scss
@@ -18,7 +18,7 @@
             background-size: 400px;
         }
         p {
-            color: grey !important;
+            color: white !important;
             font-size: $font-size-lg !important;
             font-family: ToonTime, $o-font-family-sans-serif;
         }
